# VapourSynth-TCanny

./: GNUmakefile  Makefile.am  README.md  configure  configure.ac  meson.build  meson_options.txt
TCanny/: TCanny.cl  TCanny.cpp  TCanny.h  TCanny.hpp  TCanny.vcxproj  TCanny.vcxproj.filters  TCannyCL.cpp  TCanny_AVX.cpp  TCanny_AVX2.cpp  TCanny_AVX512.cpp  TCanny_SSE2.cpp  shared.hpp
TCanny/VCL2/: instrset.h  vectorclass.h  vectorf128.h  vectorf256.h  vectorf512.h  vectori128.h  vectori256.h  vectori512.h  vectori512s.h
TCanny/vectorclass/: vectorf128.h  vectorf256.h  vectorf256e.h  vectori128.h  vectori256.h  vectori256e.h  vectormath_common.h
